Fixed minor wspace gap betwen images, changed bc

--- a/CSS4/style.scss
+++ b/CSS4/style.scss
@@ -352,6 +352,7 @@ main {
       @include tabletL {
         display: flex;
         flex-wrap: wrap;
+        
 
         div {
           flex: 1 1 0;
@@ -359,6 +360,7 @@ main {
       }
 
       .text {
+          
         p {
           padding: 1rem;
           padding-top: 1.5rem;
@@ -386,12 +388,16 @@ main {
       .pic {
         display: flex;
         max-height: 50vh;
+        flex: 1;
 
         img {
-          max-width: 100%;
+          max-width: 101%;
           max-height: 100%;
           object-fit: cover;
-          display: block;
+          display: flex;
+          flex: 1;
+          
+          
         }
       }
     }
@@ -438,11 +444,13 @@ main {
 
       @include tabletL {
         flex-direction: row;
+        background: $offblack;
       }
     }
   }
 
   background-image: linear-gradient(to bottom, #fdfdfd, #fbfbfb, #f9f9f9, #f7f7f7, #f5f5f5);
+  
 
   @include tabletP {
   }
